try to avoid flicker for all fontawesome icons

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,11 @@ img {
   margin-top: -25px;
 }
 
+i.fa {
+  display: inline-block;
+  width: 1.5em;
+}
+
 /* --- Navbar --- */
 
 a.nav-twitter {
